--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
     -moz-user-drag: none;
 }
 
+body {
+    width: 100%;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 @font-face {
     font-family: "Be Vietnam Pro";
     src: url("font/BeVietnamPro-Light.ttf");
@@ -34,7 +40,42 @@ input, select {
 
 header {
     width: 100%;
-    height: 100px;
+    height: 55px;
+}
+
+.pc {
+    display: none;
+}
+
+.mb {
+    position: fixed;
+    z-index: 10;
+    background-color: #111;
+    width: 100%;
+    bottom: 0;
+    height: 70px;
+    background: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
+    display: flex;
+    align-items: center;
+}
+
+.mb ul li {
+    margin: 0 10px 0 10px;
+    border: none;
+    background: transparent;
+    list-style: none;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.mb svg {
+    width: 30px;
+    height: 30px;
+}
+
+.mb p {
+    color: #fff;
+    font-size: 10px;
 }
 
 header .header-brand {
@@ -72,19 +113,20 @@ header nav ul li button {
     color: #111;
 }
 
-header nav .search {
+.search2 {
     align-items: center;
     display: flex;
     position: relative;
-    width: 35%;
-    height: 40px;
-    padding: 43px;
+    width: 80%;
+    height: 30px;
+    /* padding: 25px; */
     border-radius: 20px;
     color: gray;
-    margin-left: 58%;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
-header nav .search::before {
+.search2::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -95,13 +137,13 @@ header nav .search::before {
     z-index: -1;
 }
 
-header nav .search .bi {
+.search2 .bi {
     position: absolute;
     font-size: 30px;
     padding: 3px 0px 0px 10px;
 }
 
-header nav .search input {
+.search2 input {
     position: absolute;
     width: 80%;
     background: none;
@@ -126,11 +168,12 @@ header nav .search input {
 .box {
     align-items: center;
     justify-content: center;
-    display: flex;
+    display: flex;  
     width: 100%;
     height: 90vh;
     background: #111;
 }
+
 
 .box2, .artists-boxx {
     align-items: center;
@@ -248,7 +291,7 @@ header nav .search input {
 .checkpoint {
     width: 100%;
     list-style-type: none;
-    padding: 10px 0 10px 50px;
+    padding: 10px;
     display: flex;
     align-items: center;
     border-radius: 10px;
@@ -260,35 +303,40 @@ header nav .search input {
 .songItem span,
 .checkpoint span {
     width: 100px;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: 600;
     color: #fff;
+}
+
+.checkpoint {
+    display: none;
 }
 
 
 .songItemAlbum img,
 .songItem img,
 .checkpoint img {
-    width: 50px;
-    height: 50px;
-    margin-left: 25px;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
     object-fit: cover;
 }
 
 .songItemAlbum h5,
 .songItem h5,
 .checkpoint h5 {
-    font-size: 20px;
-    margin-left: 180px;
+    width: 100%;
+    font-size: 15px;
+    margin-left: 20px;
     color: #fff;
 }
 
 .albumItem h1,
 .albumcustomItem h1,
 .create-album h1 {
-    margin-top: 10px;
+    margin-top: 5px;
     color: #dedede;
-    font-size: 25px;
+    font-size: 20px;
     position: center;
 }
 
@@ -298,7 +346,7 @@ header nav .search input {
 .albumItem .subtitle,
 .albumcustomItem .subtitle,
 .create-album .subtitle {
-    font-size: 15px;
+    font-size: 12px;
     color: #dedede;
 }
 
@@ -309,9 +357,8 @@ header nav .search input {
     width: 25px;
     height: 25px;
     background: transparent;
-    float: left;
     border: none;
-    margin-right: 100px;
+    margin-right: 20px;
     color: rgba(163, 133, 133, 0.15)
 }
 
@@ -322,6 +369,7 @@ header nav .search input {
     display: flex;
     text-align: center;
     display: none;
+    margin-top: 20px;
 }
 
 .songItem.hide {
@@ -349,19 +397,18 @@ header nav .search input {
 }
 
 .music-player {
-    width: 1200px;
+    width: 500px;
     border-radius: 12px;
-    height: 285px;
+    height: 550px;
     background: #111;
     box-shadow: 0 40px 100px rgba(255,255,255,0.1);
-    padding: 20px;
+    padding: 30px;
     overflow: hidden;
     color: #fff;
 }
 
 .panel {
-    align-items: center;
-    justify-content: center;
+    width: 100%;
     display: block;
 }
 
@@ -369,7 +416,7 @@ header nav .search input {
 .artist-name {
     display: block;
     text-align: center;
-    height: 48px;
+    height: 45px;
 }
 
 #artists-suggested, 
@@ -468,12 +515,12 @@ header nav .search input {
 }
 
 .disk {
-    float: left;
     position: relative;
     display: block;
-    margin: 30px 100px 0px 100px;
-    width: 180px;
-    height: 180px;
+    margin: 30px auto;
+    margin-top: 10px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     background-image: url('img/banner/00000.jpg');
     background-size: cover;
@@ -482,10 +529,7 @@ header nav .search input {
     animation-play-state: paused;
 }
 
-.panel {
-    align-items: center;
-    justify-content: center;
-}
+
 .disk::before {
     content: "";
     position: absolute;
@@ -498,12 +542,30 @@ header nav .search input {
     background: #111;
 }
 
+.panel {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: block;
+}   
+
 .song-slider {
-    display: inline-block;
-    width: 750px;
-    position: absolute;
+    width: 100%;
+    position: relative;
     margin-bottom: 20px;
+    align-items: center;
 }
+
+.timebox .current-time {
+    position: absolute;
+    left: 0;
+}
+
+.timebox .song-duration {
+    position: absolute;
+    right: 0;
+}
+
 .seek-bar {
     -webkit-appearance: none;
     width: 100%;
@@ -511,8 +573,9 @@ header nav .search input {
     border-radius: 10px;
     background: #fff;
     overflow: hidden;
-    
+    cursor: pointer;
 }
+
 .seek-bar::-webkit-slider-thumb{
     -webkit-appearance: none;
     width: 1px;
@@ -524,22 +587,17 @@ header nav .search input {
 .current-time,
 .song-duration {
     font-size: 14px;
-}
-
-.song-duration{
-    position: absolute;
-    right: 0;
+    position: 
 }
 
 .volume-bar {
-    float: right;
     -webkit-appearance: none;
     width: 100px;
     height: 5px;
     border-radius: 10px;
     background: #fff;
     overflow: hidden;
-    margin: 0 -140px 0 100px;
+    cursor: pointer;
 }
 
 .volume-bar::-webkit-slider-thumb{
@@ -550,26 +608,39 @@ header nav .search input {
     box-shadow: -200px 0 0 200px rgb(225, 120, 90, 255);
 }
 
+.btnbox {
+    display: flex;
+    width: 100%;
+    margin: 10px auto;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.volbox {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    margin: 0 0 20px 80px;
+}
+
 .volume-btn,
 .volume-btn-mute {
     background: transparent;
     border: none;
     text-decoration: none;
-    
-    margin: 0 -115px 0 75px;
+    margin: 0 20px 0 75px;
 }
 
-.volume-btn-mute {
-    margin: 0 -119px 0 74px;
-}
 
 .controls {
-    width: 38%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin: auto;
-    margin-top: 50px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.volbox {
+    display: none;
 }
 
 .play-btn {
@@ -579,7 +650,7 @@ header nav .search input {
     height: 60px;
     border-radius: 50%;
     background: #d5eebb;
-    
+    margin: 0 20px 0 20px;
     border: none;
 }
 
@@ -653,8 +724,19 @@ header nav .search input {
     justify-content: center;
     align-items: center;
     border: none;
-    
-    margin: 0 5px 0 5px;
+    margin: 0 12px 0 12px;
+}
+
+.btnbox {
+    display: flex;
+    width: 75%;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.btn-box {
+    align-items: center;
+    display: flex;
 }
 
 .repeat-btn.active,
@@ -664,7 +746,7 @@ header nav .search input {
 
 .album {
     width: 100%;
-    height: 360px;
+    height: 250px;
     overflow: hidden;
 }
 
@@ -677,14 +759,14 @@ header nav .search input {
 .album h5 {
     width: 100%;
     color: #fff;
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Be Vietnam Pro';
 }
 
 .box2 .scrollAlbumArtists,
 .box2 .scrollAlbumCustom {
     width: 100%;
-    height: 300px;
+    height: 200px;
     overflow: hidden;
 }
 
@@ -700,11 +782,11 @@ header nav .search input {
 .album .extent-button2,
 .album .back-button2 {
     border: none;
-    font-size: 20px;
+    font-size: 18px;
     font-family: "Be Vietnam Pro";
     color: gray;
     background: transparent;
-    width: 100px;
+    width: 90px;
     transition: .2s linear;
 }
 
@@ -719,20 +801,21 @@ header nav .search input {
 
 .album .albumTitle {
     display: flex;
-    margin-bottom: 25px;
+    margin-bottom: 12px;
+    margin-right: 10px;
 }
 
 .albumItem,
 .albumcustomItem,
 .create-album {
-    width: 230px;
-    height: 280px;
+    width: 160px;
+    height: 180px;
     border: none;
     background:rgba(184, 184, 184,.1);
-    border-radius: 12px;
+    border-radius: 6px;
     list-style-type: none;
     font-family: 'Be Vietnam Pro';    
-    margin: 0 30px 80px 40px;
+    margin: 0 15px 40px 20px;
     transition: .2s linear;
 }
 
@@ -745,8 +828,8 @@ header nav .search input {
 .albumItem img,
 .albumcustomItem img,
 .create-album svg {
-    width: 170px;
-    height: 170px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -764,6 +847,15 @@ header nav .search input {
 
 
 @media only screen and (min-width: 1000px) {
+    .pc {
+        display: block
+    }
+
+    header {
+        width: 100%;
+        height: 100px;
+    }
+
     header .header-brand {
         margin: 31px 0;
         text-align: left;
@@ -788,4 +880,269 @@ header nav .search input {
     .mb {
         display: none;
     }
+
+    
+    .music-player {
+        width: 88%;
+        border-radius: 12px;
+        height: 285px;
+        background: #111;
+        box-shadow: 0 40px 100px rgba(255,255,255,0.1);
+        padding: 20px;
+        overflow: hidden;
+        color: #fff;
+        display: flex;
+        align-items: center;
+    }
+    
+    .disk-box {
+        width: 300px;
+        display: block;
+        margin: 0 50px 0 50px;
+    }
+
+    .disk {
+        display: block;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-image: url('img/banner/00000.jpg');
+        background-size: cover;
+        box-shadow: 0 0 0 10px rgba(250, 250, 250, 0.08);
+    }
+
+    .panel {
+        width: 80%;
+        justify-content: center;
+        align-items: center;
+        display: block;
+        margin-right: 20px;
+    }   
+    
+
+    .seek-bar {
+        width: 100%;
+        height: 5px;
+        border-radius: 10px;
+        background: #fff;
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+    .controls {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+
+    .volbox {
+        width: 25%;
+        display: flex;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        margin-top: 20px;
+    }
+    
+    .volume-btn,
+    .volume-btn-mute {
+        background: transparent;
+        border: none;
+        text-decoration: none;
+        margin: 0 12px 0 75px;
+    } 
+    
+    
+    header nav .search {
+        align-items: center;
+        display: flex;
+        position: relative;
+        width: 35%;
+        height: 40px;
+        padding: 43px;
+        border-radius: 20px;
+        color: gray;
+        margin-left: 58%;
+    }
+
+    header nav .search::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 40px;
+        border-radius: 20px;
+        background: rgba(184, 184, 184,.1);
+        backdrop-filter: blur(5px);
+        z-index: -1;
+    }
+
+    header nav .search .bi {
+        position: absolute;
+        font-size: 30px;
+        padding: 3px 0px 0px 10px;
+    }
+
+    header nav .search input {
+        position: absolute;
+        width: 80%;
+        background: none;
+        outline: none;
+        border: none;
+        padding: 0px 10px;
+        color: #111;
+        font-size: 20px;
+        font-family: 'Be Vietnam Pro';
+        margin-left: 10%;
+    }
+
+    .songItemAlbum,
+    .songItem,
+    .checkpoint {
+        width: 100%;
+        list-style-type: none;
+        padding: 10px 0 10px 50px;
+        display: flex;
+        align-items: center;
+        border-radius: 10px;
+        font-family: 'Be Vietnam Pro';
+    }
+
+
+    .songItemAlbum span,
+    .songItem span,
+    .checkpoint span {
+        width: 100px;
+        font-size: 25px;
+        font-weight: 600;
+        color: #fff;
+    }
+
+
+    .songItemAlbum img,
+    .songItem img,
+    .checkpoint img {
+        width: 50px;
+        height: 50px;
+        margin-left: 25px;
+        object-fit: cover;
+    }
+
+    .songItemAlbum h5,
+    .songItem h5,
+    .checkpoint h5 {
+        width: fit-content;
+        font-size: 20px;
+        margin-left: 180px;
+        color: #fff;
+    }
+
+    
+    .songItemAlbum .run,
+    .songItem .run,
+    .checkpoint .run {
+        width: 25px;
+        height: 25px;
+        background: transparent;
+        float: left;
+        border: none;
+        margin-right: 100px;
+        color: rgba(163, 133, 133, 0.15)
+    }
+
+    .search2 {
+        display: none;
+    }
+
+    .songItemAlbum h5 .subtitle,
+    .songItem h5 .subtitle,
+    .checkpoint h5 .subtitle,
+    .albumItem .subtitle,
+    .albumcustomItem .subtitle,
+    .create-album .subtitle {
+        font-size: 15px;
+        color: #dedede;
+    }
+
+    
+    .box {
+        align-items: center; 
+        width: 100%;
+        height: 90vh;
+        background: #111;
+    }
+
+    .album {
+        height: 360px;
+    }
+
+    .album .albumTitle {
+        display: flex;
+        margin-bottom: 25px;
+    }
+
+    .albumItem,
+    .albumcustomItem,
+    .create-album {
+        width: 230px;
+        height: 280px;
+        border: none;
+        background:rgba(184, 184, 184,.1);
+        border-radius: 12px;
+        list-style-type: none;
+        font-family: 'Be Vietnam Pro';    
+        margin: 0 30px 80px 40px;
+        transition: .2s linear;
+    }
+
+    .albumItem:hover,
+    .albumcustomItem:hover,
+    .create-album:hover {
+        background: rgba(255, 255, 255, 0.15)
+    }
+
+    .albumItem img,
+    .albumcustomItem img,
+    .create-album svg {
+        width: 170px;
+        height: 170px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    .albumcustomItem img,
+    .create-album svg {
+        border-radius: 12px;
+    }
+
+    .box2 .scrollAlbumArtists,
+    .box2 .scrollAlbumCustom {
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+    }
+
+    .album h5 {
+        font-size: 25px;
+    }
+
+        
+    .album .extent-button,
+    .album .back-button,
+    .album .extent-button2,
+    .album .back-button2 {
+        font-size: 20px;
+        width: 100px;
+    }
+
+    
+    .albumItem h1,
+    .albumcustomItem h1,
+    .create-album h1 {
+        margin-top: 10px;
+        font-size: 25px;
+    }
+    
 }
