--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header nav ul li button {
 
 .box2, .artists-boxx {
     align-items: center;
-    padding: 20px 0 0 50px;
+    padding: 20px 0 0 20px;
     width: 100%;
     height: 90vh;
     background: #111;
@@ -586,8 +586,7 @@ header nav ul li button {
 
 .current-time,
 .song-duration {
-    font-size: 14px;
-    position: 
+    font-size: 14px
 }
 
 .volume-bar {
@@ -815,7 +814,7 @@ header nav ul li button {
     border-radius: 6px;
     list-style-type: none;
     font-family: 'Be Vietnam Pro';    
-    margin: 0 15px 40px 20px;
+    margin: 0 20px 35px 20px;
     transition: .2s linear;
 }
 
@@ -1145,4 +1144,14 @@ header nav ul li button {
         font-size: 25px;
     }
     
+    .box2, .artists-boxx {
+        align-items: center;
+        padding: 20px 0 0 50px;
+        width: 100%;
+        height: 90vh;
+        background: #111;
+        overflow: hidden;
+        overflow-y: scroll;
+        border: none;
+    }
 }
