--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header nav ul li button {
 
 .box2, .artists-boxx {
     align-items: center;
-    padding: 20px 0 0 20px;
+    padding: 20px 0 0 50px;
     width: 100%;
     height: 55vh;
     background: #111;
@@ -272,7 +272,7 @@ header nav ul li button {
 }
 
 .music-box::-webkit-scrollbar {
-    display: block;
+    display: none;
 }
 
 
@@ -414,10 +414,14 @@ header nav ul li button {
 
 .music-name,
 .artist-name {
-    display: block;
+    margin: 0 auto;
+    margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
-    height: 45px;
+    height: fit-content;
+    width: fit-content;
 }
+
 
 #artists-suggested, 
 #created-album {
@@ -807,7 +811,7 @@ header nav ul li button {
 .albumItem,
 .albumcustomItem,
 .create-album {
-    width: 160px;
+    width: 135px;
     height: 180px;
     border: none;
     background:rgba(184, 184, 184,.1);
@@ -1155,6 +1159,10 @@ header nav ul li button {
         border: none;
     }
 
+    .artists-boxx {
+        padding: 0;
+    }    
+
     .artists-boxx .introduce-artist {
         display: flex;
         width: 100%;
@@ -1185,5 +1193,27 @@ header nav ul li button {
         width: 100%;
         background: #111;
         padding: 25px 50px 0 50px;
+    }
+
+    
+    .music-box::-webkit-scrollbar {
+        display: block;
+    }
+
+    .music-name,
+    .artist-name {
+        display: block;
+        text-align: center;
+        height: 45px;
+    }
+
+    
+    .artists-boxx {
+        width: 100%;
+        height: 90vh;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-y: -100px;
+        overflow-y: scroll;
     }
 }
