--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header {
     width: 100%;
     bottom: 0;
     height: 70px;
-    background: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
+    background: linear-gradient(to top, rgba(0,0,0,1), 40%, rgba(0,0,0,0.8), rgba(0,0,0,0));
     display: flex;
     align-items: center;
 }
@@ -180,7 +180,7 @@ header nav ul li button {
 }
 
 .mini-player {
-    padding: 5px 5px 5px 5px;
+    padding: 5px 100px 5px 5px;
     width: 95%;
     border-radius: 5px;
     bottom: 70px;
@@ -196,16 +196,18 @@ header nav ul li button {
     font-family: "Be Vietnam Pro";
     font-weight: 900;
     font-size: 15px;
-    width: fit-content;
     color: #fff;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
+
 .mini-player .mini-artist {
     color: gray;
 }
+
+
 
 .mini-player img {
     width: 50px;
@@ -219,7 +221,7 @@ header nav ul li button {
     justify-content: center;
     display: flex;  
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     background: #111;
 }
 
@@ -228,7 +230,7 @@ header nav ul li button {
     align-items: center;
     padding: 0;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background: #111;
     overflow: hidden;
     overflow-y: scroll;
@@ -245,7 +247,7 @@ header nav ul li button {
 
 .artists-boxx {
     width: 100%;
-    height: 90vh;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -399,6 +401,8 @@ header nav ul li button {
 }
 
 .notfound {
+    width: 100%;
+    height: 66vh;
     color: #fff;
     font-size: 25px;
     font-family: 'Be Vietnam Pro';
