--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ header nav ul li button {
     height: 80px;
     width: 100%;
     background: #111;
-    padding: 15px 25px 0 25px;
+    padding: 20px 25px 20px 25px;
 }
 
 .artists-play button, .button-play-cover-box button {
@@ -618,6 +618,7 @@ header nav ul li button {
     border-radius: 50%;
     background-image: url('img/banner/00000.jpg');
     background-size: cover;
+    background-position: center;
     box-shadow: 0 0 0 10px rgba(250, 250, 250, 0.08);
     animation: rotate 20s linear infinite;
     animation-play-state: paused;
