--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+
 body {
     width: 100%;
     height: 100vh;
@@ -239,6 +240,7 @@ header nav ul li button {
 
 .artists-boxx .name-artist, .creator-boxx h1 {
     font-size: 40px;
+    text-align: center;
     color: #fff;
     font-family: 'Be Vietnam Pro Black';
 }
@@ -265,10 +267,11 @@ header nav ul li button {
 }
 
 .artists-play, .button-play-cover-box {
-    height: 80px;
+    height: 100px;
     width: 100%;
     background: #111;
-    padding: 20px 25px 20px 25px;
+    padding-left: 25px;
+    padding: 20px;
 }
 
 .artists-play button, .button-play-cover-box button {
@@ -290,35 +293,41 @@ header nav ul li button {
 .artists-boxx .introduce-artist, .creator-boxx .introduce-album {
     display: block;
     width: 100%;
-    height: 250px;
-    background: transparent;
+    height: 300px;
+    background: linear-gradient(to bottom, rgb(255,255,255), #111);
     color: #fff;
     align-items: center;
     padding: 0 0 0 25px;
 }
 
 .creator-boxx .introduce-album {
-    background: linear-gradient(to bottom, rgba(147,71,71,255), #111);
     height: 450px;
-    padding-top: 1px;
+    background: linear-gradient(to bottom, rgba(147,71,71,255), #111);
 }
 
-.creator-boxx .cover-img {
+.creator-boxx .cover-img, .artists-boxx .cover-artist {
     width: 100%;
-    height: 180px;
+    height: 210px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    margin-top: 30px;
     margin-bottom: 30px;
 }
 
-.creator-boxx .cover-img img {
+.creator-boxx .cover-img img, .artists-boxx .cover-artist img {
     width: 180px;
     height: 180px;
     margin-left: -25px;
-    box-shadow: 0px 0px 40px 20px rgba(0,0,0,0.5);
+    box-shadow: 0px 40px 40px 20px rgba(0,0,0,0.5);
+    margin-top: 30px;
+    object-fit: cover;
+}
+
+.cover-artist img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
 }
 
 .artists-boxx .playlist-artists, .creator-boxx .playlist-creator {
@@ -337,7 +346,7 @@ header nav ul li button {
 .cover-infor p {
     color: rgba(255,255,255,0.8);
     margin: 20px 0 20px 0;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 .cover-infor h3 {
@@ -1373,6 +1382,7 @@ header nav ul li button {
         color: #fff;
         font-family: 'Be Vietnam Pro Black';
         margin-top: 100px;
+        text-align: left;
     }
     ::-webkit-scrollbar {
         width: 10px;
@@ -1464,4 +1474,7 @@ header nav ul li button {
         font-size: 13px;
     }
 
+    .artist-boxx .cover-artist {
+        display: none;
+    }
 }
