--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ header nav ul li button {
     margin-left: 45px;
 }
 
+
 .index-banner {
     width: 100%;
     height: 500px;
@@ -181,6 +182,8 @@ header nav ul li button {
 }
 
 .mini-player {
+    border: none;
+    cursor: default;
     padding: 5px 100px 5px 5px;
     width: 95%;
     border-radius: 5px;
@@ -495,7 +498,7 @@ header nav ul li button {
 .music-player {
     width: 500px;
     border-radius: 12px;
-    height: fit-content;
+    height: 100vh;
     background: linear-gradient(to bottom, #000, 10%, #111);
     box-shadow: 0 40px 100px rgba(255,255,255,0.1);
     padding: 30px;
@@ -1026,10 +1029,6 @@ header nav ul li button {
     .index-banner {
         width: 100%;
         height: 80vh;
-        background-image: url(img/banner.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
     }
 
     .container {
@@ -1046,7 +1045,7 @@ header nav ul li button {
     .status {
         display: none
     }
-    
+
     .music-player {
         width: 88%;
         border-radius: 12px;
