--- a/style.css
+++ b/style.css
@@ -977,6 +977,7 @@ header nav ul li button {
 .albumItem img,
 .albumcustomItem img,
 .create-album svg {
+    box-shadow: 0px 20px 25px -5px rgba(0,0,0,0.5);
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -1400,7 +1401,7 @@ header nav ul li button {
         font-size: 25px;
         display: block;
         text-align: center;
-        height: 45px;
+        height: fit-content
     }
 
     
